--- a/styles/style-global.css
+++ b/styles/style-global.css
@@ -22,10 +22,6 @@
 body{
 	margin: 0px;
 	padding: 0px;
-	/* The following prevents the overflow of Whatsapp Button.
-		Which has its starting animation position 
-		beyond the viewport to the right. */
-	overflow-x: hidden;
 }
 
 header, section, footer {
